--- a/RouteOptimizer/RouteOptimizer/SearchResultCell.xib
+++ b/RouteOptimizer/RouteOptimizer/SearchResultCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -18,7 +18,7 @@
                         <animations/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Patxi's Pizza San Francisco, CA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8O-FN-Asd">
-                        <rect key="frame" x="59" y="8" width="200" height="17"/>
+                        <rect key="frame" x="59" y="8" width="201.5" height="17"/>
                         <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="200" id="bLn-sM-WFz"/>
@@ -26,9 +26,14 @@
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="bLn-sM-WFz"/>
+                            </mask>
+                        </variation>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Emerson Street, Palo Alto, CA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lVq-C4-7tK">
-                        <rect key="frame" x="59" y="25" width="200" height="21"/>
+                        <rect key="frame" x="59" y="25" width="155.5" height="21"/>
                         <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="VJ4-2f-NuC"/>
@@ -37,6 +42,11 @@
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Z9Z-Pz-wpn"/>
+                            </mask>
+                        </variation>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+ 7 MINS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TS4-6m-Gfl">
                         <rect key="frame" x="279" y="8" width="69.5" height="19.5"/>
@@ -82,7 +92,9 @@
                 <constraint firstItem="i6V-Jl-Zq3" firstAttribute="leading" secondItem="TS4-6m-Gfl" secondAttribute="trailing" constant="15" id="Xc7-kg-q2I"/>
                 <constraint firstItem="c8O-FN-Asd" firstAttribute="leading" secondItem="5Em-zk-x9j" secondAttribute="trailing" constant="18" id="YXj-KV-2NK"/>
                 <constraint firstItem="lVq-C4-7tK" firstAttribute="leading" secondItem="c8O-FN-Asd" secondAttribute="leading" id="c92-oe-m6M"/>
+                <constraint firstItem="TS4-6m-Gfl" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="c8O-FN-Asd" secondAttribute="trailing" constant="8" id="cYF-5B-52J"/>
                 <constraint firstItem="c8O-FN-Asd" firstAttribute="top" secondItem="4vv-bS-yF2" secondAttribute="topMargin" id="gYs-IS-OkI"/>
+                <constraint firstItem="Vmo-Hy-Fb0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="lVq-C4-7tK" secondAttribute="trailing" constant="8" id="hyj-d6-XzA"/>
                 <constraint firstItem="5Em-zk-x9j" firstAttribute="leading" secondItem="4vv-bS-yF2" secondAttribute="leading" constant="12" id="tVT-dL-doN"/>
             </constraints>
             <size key="customSize" width="448" height="84"/>
